# SmartBPMTrigger

./: CMakeLists.txt  README.md  about.md  changelog.md  mod.json
.github/workflows/: build.yml  release.yml
src/: SmartBPMTrigger.cpp  SmartBPMTrigger.hpp
src/classes/: SBTColorWidget.cpp  SBTColorWidget.hpp  SBTOptionsPopup.cpp  SBTOptionsPopup.hpp  SBTSettingsPopup.cpp  SBTSettingsPopup.hpp  SBTTriggerData.cpp  SBTTriggerData.hpp
src/hooks/: CCDrawNode.cpp  ColorSelectPopup.cpp  DrawGridLayer.cpp  EditorPauseLayer.cpp  EditorUI.cpp  GameManager.cpp  LevelEditorLayer.cpp  SetupAudioLineGuidePopup.cpp  SetupTriggerPopup.cpp
