cmake_minimum_required(VERSION 3.21)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
if ("${CMAKE_SYSTEM_NAME}" STREQUAL "iOS" OR IOS)
    set(CMAKE_OSX_ARCHITECTURES "arm64")
else()
    set(CMAKE_OSX_ARCHITECTURES "x86_64;arm64")
endif()
set(CMAKE_CXX_VISIBILITY_PRESET hidden)
set(GEODE_DISABLE_PRECOMPILED_HEADERS ON)

project(SmartBPMTrigger VERSION 1.1.3)

add_library(${PROJECT_NAME} SHARED
    src/classes/SBTOptionsPopup.cpp
    src/classes/SBTSettingsPopup.cpp
    src/classes/SBTTriggerData.cpp
    src/hooks/ColorSelectPopup.cpp
    src/hooks/DrawGridLayer.cpp
    src/hooks/EditorPauseLayer.cpp
    src/hooks/EditorUI.cpp
    src/hooks/LevelEditorLayer.cpp
    src/hooks/SetupAudioLineGuidePopup.cpp
    src/hooks/SetupTriggerPopup.cpp
    src/SmartBPMTrigger.cpp
)

if (NOT DEFINED ENV{GEODE_SDK})
    message(FATAL_ERROR "Unable to find Geode SDK! Please define GEODE_SDK environment variable to point to Geode")
else()
    message(STATUS "Found Geode: $ENV{GEODE_SDK}")
endif()

add_subdirectory($ENV{GEODE_SDK} ${CMAKE_CURRENT_BINARY_DIR}/geode)

setup_geode_mod(${PROJECT_NAME})
